# rust-zero-to-production

./: Cargo.toml  Dockerfile  LICENSE-MIT  README.md  deny.toml
.github/workflows/: general.yml
.sqlx/: query-36c207a34b13a820dc78e1dc8ebd34ca92d7ea96177b0c26dbb053f28f85da1e.json
scripts/: init_db.sh
src/: configuration.rs  domain.rs  main.rs
src/domain/: subscriber_email.rs
src/routes/: newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
