[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Adam Walz <adam@adamwalz.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0.197"
config = { version = "0.14", default-features = false, features = ["yaml"] }
sqlx = { version = "0.7", default-features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.35", default-features = false, features = ["clock"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
