[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Adam Walz <adam@adamwalz.net>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0.197"
config = { version = "0.14", default-features = false, features = ["yaml"] }
sqlx = { version = "0.7", default-features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.35", default-features = false, features = ["clock"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
tracing-actix-web = "0.7"
secrecy = { version = "0.8.0", features = ["serde"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }
once_cell = "1.19.0"
