[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Adam Walz <adam@adamwalz.net>"]
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = "1.0.197"
config = { git = "https://github.com/mehcode/config-rs.git", rev = "e3c1d0b452639478662a44f15ef6d5b6d969bf9b", default-features = false, features = [
  "yaml",
] }
sqlx = { version = "0.7", default-features = false, features = [
  "runtime-tokio-rustls",
  "macros",
  "postgres",
  "uuid",
  "chrono",
  "migrate",
] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4.35", default-features = false, features = ["clock"] }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-bunyan-formatter = "0.3.9"
tracing-log = "0.2.0"
thiserror = "1.0.58"
serde-aux = "4"
unicode-segmentation = "1.11"
rand = { version = "0.8", features = ["std_rng"] }
anyhow = "1.0.81"
validator = "0.17"
tracing-actix-web = "0.7"
secrecy = { version = "0.8", features = ["serde"] }

[dev-dependencies]
claims = "0.7"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
fake = "~2.9.2"
wiremock = "0.6"
serde_json = "1.0.115"
once_cell = "1.19.0"
linkify = "0.10"
